<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:id="@+id/submitMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            tools:text="Submit Message here"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/name_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/email_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/dob_label"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <DatePicker
            android:id="@+id/dateOfBirthInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text|date"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/share_data"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:textOn="@string/on"
            android:textOff="@string/off"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_size"
                android:text="@string/save"
                android:onClick="onSaveClick"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

            <Button
                android:id="@+id/saveRevert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/button_text_size"
                android:text="@string/revert"
                android:onClick="onRevertClick"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>